Server monitor now uses gradle application plugin Module names no longer used as artifact names
git-svn-id: svn://svn.hafro.is/jminor/trunk@8618 51816742-9f83-410d-85ed-e7bcf7042953