@@ -38,6 +38,8 @@ task runServer(type: JavaExec) {
 
     main = 'org.jminor.framework.server.DefaultEntityConnectionServer'
 
+//    jvmArgs '--add-modules', 'java.xml.bind'
+
     systemProperties = [
             'jminor.db.type': 'h2',
             'jminor.db.host': 'h2db',
